--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,28 @@
         android:textColor="#000000"
         android:layout_margin="16dp"
         android:textAllCaps="true"/>
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:text="+"
+        android:textColor="#000000"
+        android:layout_marginLeft="16dp"
+        android:onClick="increment"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="2"
         android:textColor="#000000"
         android:layout_marginLeft="16dp" />
+
+    <Button
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:text="-"
+        android:textColor="#000000"
+        android:layout_marginLeft="16dp"
+        android:onClick="decrement"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/price_text_view"
-        android:text="¥0"
+        android:text="¥10"
         android:textColor="#000000"
         android:layout_marginLeft="16dp" />
 
