--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     tools:context="com.example.ershaung.myapplication.MainActivity">
 
     <TextView
@@ -15,28 +14,36 @@
         android:textColor="#000000"
         android:layout_margin="16dp"
         android:textAllCaps="true"/>
-    <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:text="+"
-        android:textColor="#000000"
-        android:layout_marginLeft="16dp"
-        android:onClick="increment"/>
-
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2"
-        android:textColor="#000000"
-        android:layout_marginLeft="16dp" />
+        android:orientation="horizontal">
 
-    <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:text="-"
-        android:textColor="#000000"
-        android:layout_marginLeft="16dp"
-        android:onClick="decrement"/>
+        <Button
+             android:layout_width="48dp"
+             android:layout_height="48dp"
+             android:text="-"
+             android:layout_marginLeft="16dp"
+             android:textColor="#000000"
+             android:onClick="increment"/>
+
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="0"
+             android:textColor="#000000"
+             android:id="@+id/quantity_text_view"
+             android:layout_margin="8dp"
+             android:layout_gravity="center_vertical" />
+
+          <Button
+             android:layout_width="48dp"
+             android:layout_height="48dp"
+             android:text="+"
+             android:textColor="#000000"
+             android:onClick="decrement"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -50,18 +57,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/price_text_view"
-        android:text="¥10"
+        android:text="¥0"
         android:textColor="#000000"
         android:layout_marginLeft="16dp" />
 
-<Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/quantity_text_view"
-    android:text="order"
-    android:textColor="#000000"
-    android:textAllCaps="true"
-    android:layout_margin="16dp"
-    android:onClick="submitOrder"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="order"
+        android:textColor="#000000"
+        android:textAllCaps="true"
+        android:layout_margin="16dp"
+        android:onClick="submitOrder"/>
 
 </LinearLayout>
