--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,34 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Toppings"
+        android:textColor="#000000"
+        android:layout_margin="16dp"
+        android:textAllCaps="true"/>
+
+    <CheckBox
+        android:id="@+id/whipped_cream_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:text="Whipped cream"
+        android:paddingLeft="24dp"
+        android:textSize="16sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="quality"
         android:textColor="#000000"
         android:layout_margin="16dp"
         android:textAllCaps="true"/>
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+>
 
         <Button
              android:layout_width="48dp"
@@ -48,7 +68,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="price"
+        android:text="order summary"
         android:textColor="#000000"
         android:layout_margin="16dp"
         android:textAllCaps="true"/>
@@ -56,7 +76,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/price_text_view"
+        android:id="@+id/order_summary_text_view"
         android:text="¥0"
         android:textColor="#000000"
         android:layout_marginLeft="16dp" />
