--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,21 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <EditText
+            android:id="@+id/name_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:hint="name"
+            android:inputType="textCapWords"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="Toppings"
-            android:textAllCaps="true"
-            android:textColor="#000000" />
+            style="@style/HeaderTextStyle"
+            android:textAllCaps="true" />
 
         <CheckBox
             android:id="@+id/whipped_cream_checkbox"
@@ -42,8 +50,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="quality"
-            android:textAllCaps="true"
-            android:textColor="#000000" />
+            style="@style/HeaderTextStyle"
+ />
 
 
         <LinearLayout
@@ -66,6 +74,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_margin="8dp"
                 android:text="0"
+                style="@style/HeaderTextStyle"
                 android:textColor="#000000" />
 
             <Button
@@ -82,8 +91,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:text="order summary"
+            style="@style/HeaderTextStyle"
             android:textAllCaps="true"
-            android:textColor="#000000" />
+             />
 
         <TextView
             android:id="@+id/order_summary_text_view"
@@ -91,6 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:text="¥0"
+            style="@style/HeaderTextStyle"
             android:textColor="#000000" />
 
         <Button
